Add results and table-web